Selenium Ders 23 - Cucumber

--- a/configuration.properties
+++ b/configuration.properties
@@ -1,2 +1,5 @@
 browser = chrome
 AmazonURL = https://www.amazon.com
+TechProURL = https://www.techproeducation.com
+BestBuyURL = https://www.bestbuy.com
+hmcURL = https://www.hotelmycamp.com
