--- a/configuration.properties
+++ b/configuration.properties
@@ -2,4 +2,9 @@ browser = chrome
 AmazonURL = https://www.amazon.com
 TechProURL = https://www.techproeducation.com
 BestBuyURL = https://www.bestbuy.com
+
 hmcURL = https://www.hotelmycamp.com
+hmcValidUsername = manager
+hmcValidPassword = Manager1!
+hmcWrongUsername = manager1
+hmcWrongPassword = manager4
