Selenium Ders 23 - Cucumber

--- a/configuration.properties
+++ b/configuration.properties
@@ -2,6 +2,7 @@ browser = chrome
 AmazonURL = https://www.amazon.com
 TechProURL = https://www.techproeducation.com
 BestBuyURL = https://www.bestbuy.com
+editorURL = https://editor.datatables.net/
 
 hmcURL = https://www.hotelmycamp.com
 hmcValidUsername = manager
